# rc_genicam_api

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  build_win.bat  net_perf_check.sh  package.xml  rosdoc.yaml
baumer/: CMakeLists.txt  README.md  bsysgige.xml  bsysusb.xml  license.txt
baumer/Ubuntu-14.04/armv7l/: libbgapi2_gige.cti  libbgapi2_usb.cti
baumer/Ubuntu-16.04/arm64/: libbgapi2_usb.cti
baumer/Ubuntu-16.04/i686/: libbgapi2_gige.cti  libbgapi2_usb.cti
baumer/Ubuntu-16.04/x86_64/: libbgapi2_gige.cti  libbgapi2_usb.cti
baumer/Win32_i86/: bgapi2_gige.cti  bgapi2_usb.cti
baumer/Win64_x64/: bgapi2_gige.cti  bgapi2_usb.cti
cmake/: PROJECTConfig.cmake.in  PROJECTConfigVersion.cmake.in  configure_link_libs.cmake  install_dirs.cmake  optimization_flags.cmake  package_debian.cmake  project_name.cmake  project_version.cc.in  project_version.cmake  project_version.h.in
completion/: CMakeLists.txt  gc_bash_completion
debian/: rc-genicam-api.lintian-overrides
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  stream2d.cc  stream3d.cc
genicam/: CMakeLists.txt  GenicamConfig.cmake  License_ReadMe.txt
genicam/licenses/: CLSerAll_LICENSE.txt  LGPL.txt  MIT_License.txt  expat-COPYING.txt  pcre2_License.txt  xs3p_License.mht
genicam/log/config/: DefaultLogging.properties
genicam/log/config-unix/: DefaultLogging.properties
genicam/xml/FirmwareUpdate/: GenFwUpdateSchema_Version_1_0.xsd
genicam/xml/GenApi/: GenApiSchema_Version_1_0.xsd  GenApiSchema_Version_1_1.xsd  GenApi_Params_h.xsl  GenApi_Ptr_h.xsl  NodeTypes.xml  NodeTypes.xsd
rc_genicam_api/: CMakeLists.txt  buffer.cc  buffer.h  config.cc  config.h  cport.cc  cport.h  device.cc  device.h  exception.cc  exception.h  gentl_wrapper.h  gentl_wrapper_linux.cc  gentl_wrapper_win32.cc  image.cc  image.h  image_store.cc  image_store.h  imagelist.cc  imagelist.h  interface.cc  interface.h  nodemap_edit.cc  nodemap_edit.h  nodemap_out.cc  nodemap_out.h  pfnc.h  pixel_formats.h  stream.cc  stream.h  system.cc  system.h
rcgcapi/: CMakeLists.txt  buffer.cc  buffer.h  config.cc  config.h  cport.cc  cport.h  device.cc  device.h  exception.cc  exception.h  gentl_wrapper.h  gentl_wrapper_linux.cc  image.cc  image.h  imagelist.h  interface.cc  interface.h  pfnc.h  stream.cc  stream.h  system.cc  system.h
tools/: CMakeLists.txt  gc_config.cc  gc_file.cc  gc_info.cc  gc_pointcloud.cc  gc_stream.cc  nodemap_io.cc  nodemap_io.h
