<?xml version="1.0"?>
<package format="2">
    <name>rc_genicam_api</name>
    <version>2.5.1</version>
    <description>
      GenICam/GigE Vision Convenience Layer.

      This package combines the Roboception convenience layer for images with the
      GenICam reference implementation and a GigE Vision transport layer. It is a
      self contained package that permits configuration and image streaming of
      GenICam / GigE Vision 2.0 compatible cameras like the Roboception rc_visard.

      This package also provides some tools that can be called from the command line
      for discovering cameras, changing their configuration and streaming images.
      Although the tools are meant to be useful when working in a shell or in a
      script, their main purpose is to serve as example on how to use the API for
      reading and setting parameters, streaming and synchronizing images.

      See LICENSE.md for licensing terms of the different parts.
    </description>

    <maintainer email="felix.ruess@roboception.de">Felix Ruess</maintainer>
    <maintainer email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</maintainer>

    <author email="heiko.hirschmueller@roboception.de">Heiko Hirschmueller</author>

    <license>BSD</license>

    <url type="website">http://wiki.ros.org/rc_genicam_api</url>
    <url type="repository">https://github.com/roboception/rc_genicam_api</url>
    <url type="bugtracker">https://github.com/roboception/rc_genicam_api/issues</url>

    <buildtool_depend>cmake</buildtool_depend>

    <depend>libpng-dev</depend>
    <depend>libusb-1.0</depend>

    <doc_depend>doxygen</doc_depend>

    <export>
      <build_type>cmake</build_type>
    </export>
</package>
